fix fireflies not covering site

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(18, 18, 18);
   color: white;
-  height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
 }
 
